Replace Collectors.toList() with Stream.toList() throughout.
New in Java 16, I believe, or maybe 15.