@@ -53,8 +53,7 @@ import java.util.function.Consumer;
 			}
 			builder.append(fixture.getShortDescription());
 		};
-		final List<TileFixture> stream = map.getFixtures(point).stream().filter(zof).sorted(comparator)
-			.collect(Collectors.toList());
+		final List<TileFixture> stream = map.getFixtures(point).stream().filter(zof).sorted(comparator).toList();
 		if (!stream.isEmpty()) {
 			c.accept(stream.get(0));
 		}
