@@ -344,8 +344,7 @@ public class SPFluidWriter implements SPWriter {
 			writeTag(ostream, "elsewhere", indentation +2, false);
 			for (final TileFixture fixture : obj.streamLocations()
 					.filter(((Predicate<Point>) Point::isValid).negate())
-					.flatMap(p -> obj.getFixtures(p).stream())
-					.collect(Collectors.toList())) {
+					.flatMap(p -> obj.getFixtures(p).stream()).toList()) {
 				writeSPObjectImpl(ostream, fixture, indentation + 3);
 			}
 			indent(ostream, indentation + 2);
