@@ -17,7 +17,7 @@ import java.util.stream.IntStream;
 public final class StatModifierTest {
 	@Test
 	public void testModifiers() {
-		final List<Integer> stats = IntStream.range(0, 20).boxed().collect(Collectors.toList());
+		final List<Integer> stats = IntStream.range(0, 20).boxed().toList();
 		final List<Integer> modifiers = Arrays.asList(-5, -4, -3, -2, -1, 0, 1, 2, 3, 4);
 		final Iterator<Integer> statsIterator = stats.iterator();
 		for (final Integer modifier : modifiers) {
