@@ -190,8 +190,7 @@ public class FortressReportGenerator extends AbstractReportGenerator<IFortress> 
 		for (final Pair<Point, IFortress> pair : fixtures.values().stream()
 				.filter(p -> p.getValue1() instanceof IFortress)
 				.sorted(pairComparator)
-				.map(p -> Pair.with(p.getValue0(), (IFortress) p.getValue1()))
-				.collect(Collectors.toList())) {
+				.map(p -> Pair.with(p.getValue0(), (IFortress) p.getValue1())).toList()) {
 			final Point loc = pair.getValue0();
 			final IFortress fort = pair.getValue1();
 			if (currentPlayer.equals(fort.owner())) {
